--- a/CppInterpreter.Test/CppInterpreter.Test.csproj
+++ b/CppInterpreter.Test/CppInterpreter.Test.csproj
@@ -10,6 +10,8 @@
     <ItemGroup>
         <PackageReference Include="MSTest" Version="4.0.0-preview.25465.3"/>
         <PackageReference Include="Shouldly" Version="4.3.0" />
+        <PackageReference Include="Verify" Version="31.8.0" />
+        <PackageReference Include="Verify.MSTest" Version="31.8.0" />
     </ItemGroup>
 
     <ItemGroup>
