--- a/CppInterpreter.Test/CppInterpreter.Test.csproj
+++ b/CppInterpreter.Test/CppInterpreter.Test.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="MSTest" Version="4.0.2" />
+        <PackageReference Include="NSubstitute" Version="5.3.0" />
         <PackageReference Include="Shouldly" Version="4.3.0" />
         <PackageReference Include="Verify" Version="31.8.0" />
         <PackageReference Include="Verify.MSTest" Version="31.8.0" />
