implemented break and continue

--- a/CppInterpreter/CppInterpreter.csproj
+++ b/CppInterpreter/CppInterpreter.csproj
@@ -27,7 +27,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ClCompile Include="Examples\test.cpp" />
+      <Folder Include="Examples\" />
     </ItemGroup>
     
 </Project>
