--- a/CppInterpreter.Test/CppInterpreter.Test.csproj
+++ b/CppInterpreter.Test/CppInterpreter.Test.csproj
@@ -35,7 +35,7 @@
 
     <ItemGroup>
       <ClCompile Include="Examples\tests\Check_01.cpp" />
-      <ClCompile Include="Examples\tests\pos\C01_WhileBreak.cpp" />
+      <None Include="Examples\tests\pos\C01_WhileBreak.cppx" />
     </ItemGroup>
 
 </Project>
