Preparations for parsing member access

--- a/CppInterpreter.Test/CppInterpreter.Test.csproj
+++ b/CppInterpreter.Test/CppInterpreter.Test.csproj
@@ -35,6 +35,7 @@
 
     <ItemGroup>
       <ClCompile Include="Examples\tests\Check_01.cpp" />
+      <ClCompile Include="Examples\tests\Test.cpp" />
       <None Include="Examples\tests\pos\C01_WhileBreak.cppx" />
     </ItemGroup>
 
