implemented for loop interpretation

--- a/CppInterpreter.Test/CppInterpreter.Test.csproj
+++ b/CppInterpreter.Test/CppInterpreter.Test.csproj
@@ -33,7 +33,7 @@
       <ClCompile Include="Examples\tests\Check_01.cpp" />
       <ClCompile Include="Examples\tests\pos\C01_for.cpp" />
       <ClCompile Include="Examples\tests\Test.cpp" />
-      <None Include="Examples\tests\pos\C01_WhileBreak.cppx" />
+      <ClCompile Include="Examples\tests\pos\C02_WhileBreak.cpp" />
     </ItemGroup>
 
 </Project>
